# Autonomous-Parking-AV

./: GP1.npy  Parking1.npy  README.md  motion_primitive.py  parking_plot.py  spawn_parked.py
AV_Parking_Planning/: CMakeLists.txt  package.xml
AV_Parking_Planning/include/AV_Parking_Planning/: .speed_pid.hpp.swp
AV_Parking_Planning/src/: local_planner.cpp
AV_Planning/devel/: .catkin  .rosinstall  _setup_util.py  setup.sh
AV_Planning/devel/lib/AV_Parking_Planning/: AV_Parking_Planning_node
AV_Planning/devel/lib/pkgconfig/: AV_Parking_Planning.pc
AV_Planning/src/AV_Parking_Planning/: CMakeLists.txt  README.md
AV_Planning/src/AV_Parking_Planning/launch/: AV_Parking_Planning.launch
AV_Planning/src/AV_Parking_Planning/src/: AV_Planner.cpp  LQR_Controller.py  controller.py  controller1.py  global_planner.cpp  local_planner.cpp  trajectory_subscriber.py
Results/: AVParking1-2019-12-05_14.12.07.mkv  AVParking1_1-2019-12-05_14.13.03.mkv  AVParking2_1-2019-12-05_15.27.48.mkv  AVParking2_3-2019-12-05_19.54.30.mkv  AVParking3_1-2019-12-05_19.25.52.mkv  Park1-2019-12-09_17.14.48.mkv  Park2-2019-12-09_17.20.00.mkv  global_planner.cpp  global_planner_perfect.cpp
scripts/: AV_Planner.cpp  LQR_Controller.py  a.out  controller1.py  csv_plot.py  global_planner.cpp  global_planner.h  global_planner_cc.cpp  goalS.csv  local_planner.cpp  local_planner.hpp  local_waypoints.hpp  motion_primitive.py  occupancy.csv  parking_plot.py  planner.out  spawn_parked.py  startS.csv  swatch.csv  swath.csv  temp.cpp  temp_prateek.cpp  waypoints.csv  waypoints.npy
(+4 files in other folders)
